[gd_scene load_steps=18 format=3 uid="uid://dml3wini70m14"]

[ext_resource type="Script" uid="uid://cra4ulbf5fch7" path="res://scripts/background.gd" id="1_l5f8m"]
[ext_resource type="PackedScene" uid="uid://3p7lcd1g0vy" path="res://scenes/background/background_tile.tscn" id="2_6vm3t"]
[ext_resource type="Texture2D" uid="uid://bq173pfqwejjq" path="res://assets/background/background_sky.png" id="3_8efq7"]
[ext_resource type="Texture2D" uid="uid://37gre8fqlhny" path="res://assets/background/berge-1.png" id="5_evef5"]
[ext_resource type="Texture2D" uid="uid://6omo38mpjwnt" path="res://assets/background/berge-2.png" id="6_iptv4"]
[ext_resource type="Texture2D" uid="uid://clb2l75fjht3n" path="res://assets/background/doppelte_berge-1.png" id="6_o0ti4"]
[ext_resource type="Texture2D" uid="uid://df2s5yh62uoj8" path="res://assets/background/sonne.png" id="6_td6w2"]
[ext_resource type="Texture2D" uid="uid://mnoegd8awrka" path="res://assets/background/berge-3.png" id="7_g8v60"]
[ext_resource type="Texture2D" uid="uid://b2r76ai0m62tw" path="res://assets/brick_tile.png" id="7_r2thq"]
[ext_resource type="Texture2D" uid="uid://chwwvbjwk3qyo" path="res://assets/background/tower_shadow.png" id="8_0470j"]
[ext_resource type="Texture2D" uid="uid://baqqpuferqpse" path="res://assets/background/doppelte_berge-2.png" id="8_gco5v"]
[ext_resource type="Texture2D" uid="uid://dqij12rrrfssl" path="res://assets/background/doppelte_berge-3.png" id="10_3mmpu"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_o0ti4"]
load_path = "res://.godot/imported/berge-1.png-a6a78ff313c5db5893acf125f5569abd.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_gco5v"]
load_path = "res://.godot/imported/berge-2.png-5934eb728dd44844a1b7ac32537a2298.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_evef5"]
load_path = "res://.godot/imported/berge-3.png-8c31105bdbb73d9b9f12e2525b1b0042.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q8u5g"]
size = Vector2(192, 704)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wp0k4"]
size = Vector2(256, 704)

[node name="Background" type="Node2D"]
script = ExtResource("1_l5f8m")

[node name="Sky" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.1, 0.2)
repeat_size = Vector2(1408, 0)

[node name="Sprite2D" type="Sprite2D" parent="Sky"]
z_index = -6
position = Vector2(-64, -4032)
scale = Vector2(2.34667, 1)
texture = ExtResource("3_8efq7")
centered = false

[node name="Sun" type="Parallax2D" parent="."]
z_index = -2
scale = Vector2(8, 8)
scroll_scale = Vector2(1, 0)
repeat_size = Vector2(320, 0)

[node name="Sprite2D" parent="Sun" instance=ExtResource("2_6vm3t")]
position = Vector2(16, 16)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_td6w2")
region_enabled = false

[node name="Background1" type="Parallax2D" parent="."]
z_index = -1
scroll_scale = Vector2(0.2, 0.01)
repeat_size = Vector2(2048, 0)
repeat_times = 2

[node name="Montains" type="Sprite2D" parent="Background1"]
visible = false
position = Vector2(640, 512)
scale = Vector2(1.52, 1)
texture = ExtResource("5_evef5")

[node name="Montains2" type="Sprite2D" parent="Background1"]
visible = false
position = Vector2(2195, 512)
scale = Vector2(1.52, 1)
texture = SubResource("CompressedTexture2D_o0ti4")
flip_h = true

[node name="Clouds" type="Sprite2D" parent="Background1"]

[node name="Mount" type="Sprite2D" parent="Background1"]
position = Vector2(960, 512)
texture = ExtResource("6_o0ti4")

[node name="Background2" type="Parallax2D" parent="."]
z_index = -1
scroll_scale = Vector2(0.25, 0.025)
repeat_size = Vector2(2035, 0)

[node name="Clouds" type="Sprite2D" parent="Background2"]

[node name="Montains2" type="Sprite2D" parent="Background2"]
visible = false
position = Vector2(960, 512)
scale = Vector2(2.18595, 1.14578)
texture = SubResource("CompressedTexture2D_gco5v")
flip_h = true

[node name="Montains" type="Sprite2D" parent="Background2"]
visible = false
position = Vector2(3072, 512)
scale = Vector2(2.18595, 1.14578)
texture = ExtResource("6_iptv4")

[node name="Mount" type="Sprite2D" parent="Background2"]
position = Vector2(832, 512)
texture = ExtResource("8_gco5v")

[node name="Background3" type="Parallax2D" parent="."]
z_index = -1
scroll_scale = Vector2(1, 0.05)
repeat_size = Vector2(2048, 0)

[node name="Montains" type="Sprite2D" parent="Background3"]
visible = false
position = Vector2(768, 512)
scale = Vector2(2.24857, 1.01394)
texture = ExtResource("7_g8v60")
flip_h = true

[node name="Montains2" type="Sprite2D" parent="Background3"]
visible = false
position = Vector2(518, 512)
scale = Vector2(2.24857, 1.01394)
texture = SubResource("CompressedTexture2D_evef5")

[node name="Clouds" type="Sprite2D" parent="Background3"]

[node name="Mount" type="Sprite2D" parent="Background3"]
position = Vector2(704, 512)
texture = ExtResource("10_3mmpu")

[node name="Forground" type="Parallax2D" parent="."]
z_index = 7

[node name="Clouds" type="Sprite2D" parent="Forground"]

[node name="Tower" parent="." instance=ExtResource("2_6vm3t")]
z_index = -1
position = Vector2(640, 512)
scale = Vector2(4, 4)
texture = ExtResource("7_r2thq")
region_rect = Rect2(0, 0, 192, 704)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="ShadowLeft" parent="Tower" instance=ExtResource("2_6vm3t")]
z_index = 1
position = Vector2(-47.75, 7.62939e-06)
scale = Vector2(0.75, 0.5)
texture = ExtResource("8_0470j")
region_rect = Rect2(0, 0, 128, 1408)

[node name="ShadowRight" parent="Tower" instance=ExtResource("2_6vm3t")]
z_index = 1
position = Vector2(48.5, 7.62939e-06)
scale = Vector2(0.75, 0.5)
texture = ExtResource("8_0470j")
flip_h = true
region_rect = Rect2(0, 0, 128, 1408)

[node name="AreaToggle" type="Area2D" parent="Tower"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower/AreaToggle"]
shape = SubResource("RectangleShape2D_q8u5g")

[node name="AreaMirror" type="Area2D" parent="Tower"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower/AreaMirror"]
shape = SubResource("RectangleShape2D_wp0k4")

[connection signal="body_entered" from="Tower/AreaToggle" to="." method="_on_area_toggle_body_entered"]
[connection signal="body_exited" from="Tower/AreaToggle" to="." method="_on_area_toggle_body_exited"]
[connection signal="body_entered" from="Tower/AreaMirror" to="." method="_on_area_mirror_body_entered"]
[connection signal="body_exited" from="Tower/AreaMirror" to="." method="_on_area_mirror_body_exited"]
